[gd_scene load_steps=3 format=2]

[ext_resource path="res://switch_gui.gd" type="Script" id=1]
[ext_resource path="res://switch_settings_dialog.tscn" type="PackedScene" id=2]

[node name="SwitchGui" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -787.0
margin_bottom = -524.0
rect_min_size = Vector2( 0, 44 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
switch_label = NodePath("VBoxContainer/HBoxContainer2/Label")
left_button = NodePath("VBoxContainer/HBoxContainer/switch_left_button")
right_button = NodePath("VBoxContainer/HBoxContainer/switch_right_button")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 237.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 83.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "switch_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 87.0
margin_right = 170.0
margin_bottom = 20.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_button" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 174.0
margin_right = 237.0
margin_bottom = 20.0
text = "settings"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 237.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch_left_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 33.0
margin_bottom = 20.0
text = "left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch_right_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 78.0
margin_bottom = 20.0
text = "right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchSettingsDialog" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/switch_left_button" to="." method="_on_switch_left_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/switch_right_button" to="." method="_on_switch_right_button_pressed"]
